[ADD] added header + 1st section

--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
                 </div>
                 <!-- sezione link  -->
                 <div class="col-50">
-                    <span>link</span> 
-                    <span>link</span> 
-                    <span>link</span>
-                    <span>link</span>
-                    <span>link</span>  
+                    <nav>
+                        <a>Scarica</a>
+                        <a>Perché Discord</a>
+                        <a>Nitro</a>
+                        <a>Sicurezza</a>
+                        <a>Assistenza</a>
+                    </nav> 
                 </div>
                 <!-- sezione login  -->
                 <div class="col-25 login">
-                    <h3>login</h3>
+                    <a>Accedi</a>
                 </div>
             </div>
         </header>
@@ -35,7 +37,10 @@
                 <!-- sezione 1 con bg blu -->
                 <div class="flex-section bg blu">
                     <div class="section_1">
-
+                        <h2>Il tuo posto per parlare</h2>
+                        <P>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pià facile chiaccherare ogni giorno e ritrovarsi più spesso.</P>
+                        <a id="mac_link">&darr; Scarica per Mac</a>
+                        <a id="discord_browser">Apri Discord nel tuo browser</a>
                     </div>
                 </div>
                 <!-- sezione 2 con bg bianco  -->
