--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </p>
                         <img src="./img/item4-big.svg" alt="" id="imgsz5">
                         <h4>Pronto a iniziare la tua avventura?</h4>
-                        <a id="mac_link">&darr; Scarica per Mac</a>
+                        <a id="mac_link2">&darr; Scarica per Mac</a>
                     </div>
                 </div>
             </main>
