Fixes some html and css

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                     <div class="col-50-ft-dx">
                         <!-- sezione del pulsante nel footer -->
                         <a>Registrati</a>
+                    </div>
                 </div>
             </div>
         </footer>
